# stalepid-rs

./: Cargo.toml  README.md
src/: main.rs  main.rs`  tests.rs
test_data/: test1.yml  test2.yml
