[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
logroller = "0.1.10"
quoted-string = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sysinfo = "0.38.4"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"
