[package]
name = "stalepid-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
logroller = "0.1.10"
quoted-string = "0.6.1"
sysinfo = "0.38.4"
tokio = { version = "1.51.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.5"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.23"
